feat: Update project name and add Firebase dependency
Updates the project name across various configuration files (package.json, index.html, metadata.json) to use a shorter, more consistent format. Also, adds the Firebase dependency to package.json, indicating preparation for Firebase integration. Removes outdated `Page` type and related props from components to streamline navigation logic towards a section-based approach.

--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO Meta Tags -->
-    <title>Soumik Bairagi | Web Developer & Designer</title>
-    <meta name="description" content="Welcome to the professional portfolio of Soumik Bairagi. I build creative, high-performance websites and digital experiences. Explore my work, skills, and contact me for collaboration." />
-    <meta name="keywords" content="web developer, portfolio, react developer, soumik bairagi, website creation, seo services, front-end developer, gemini ai" />
-    <meta name="author" content="Soumik Bairagi" />
+    <title>Soumik | Web Developer & Designer</title>
+    <meta name="description" content="Welcome to the professional portfolio of Soumik. I build creative, high-performance websites and digital experiences. Explore my work, skills, and contact me for collaboration." />
+    <meta name="keywords" content="web developer, portfolio, react developer, soumik, website creation, seo services, front-end developer, gemini ai" />
+    <meta name="author" content="Soumik" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://your-domain.com/" />
-    <meta property="og:title" content="Soumik Bairagi | Web Developer & Designer" />
+    <meta property="og:title" content="Soumik | Web Developer & Designer" />
     <meta property="og:description" content="Creative portfolio showcasing web development projects, skills, and services." />
     <meta property="og:image" content="https://picsum.photos/1200/630" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://your-domain.com/" />
-    <meta property="twitter:title" content="Soumik Bairagi | Web Developer & Designer" />
+    <meta property="twitter:title" content="Soumik | Web Developer & Designer" />
     <meta property="twitter:description" content="Creative portfolio showcasing web development projects, skills, and services." />
     <meta property="twitter:image" content="https://picsum.photos/1200/630" />
     
@@ -89,7 +89,7 @@
         "name": "What is the cost of a new website?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "My primary website creation package costs ₹5000. This includes a free consultation, a fully responsive design, and initial SEO setup to get you started."
+          "text": "My primary website creation package costs ₹4999. This includes a free consultation, a fully responsive design, and initial SEO setup to get you started."
         }
       },{
         "@type": "Question",
@@ -115,13 +115,29 @@
       }]
     }
     </script>
+<style>
+  html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 5rem; /* Adjust this value to match your sticky header's height */
+  }
+  .claim-button-glow {
+    transition: all 0.3s ease-in-out;
+  }
+  .claim-button-glow:hover {
+    box-shadow: 0 0 8px 1px theme('colors.accent'), 0 0 20px 2px theme('colors.accent' / 70%);
+    transform: scale(1.05);
+  }
+</style>
 <script type="importmap">
 {
   "imports": {
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
-    "@google/genai": "https://aistudiocdn.com/google-genai@0.15.0"
+    "@google/genai": "https://aistudiocdn.com/google-genai@0.15.0",
+    "firebase/app": "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js",
+    "firebase/database": "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js",
+    "firebase/": "https://aistudiocdn.com/firebase@^12.2.1/"
   }
 }
 </script>
