--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
               'light-card': '#ffffff',
             },
             animation: {
-              'fade-in-up': 'fadeInUp 0.6s ease-out forwards',
               'fade-in': 'fadeIn 0.5s ease-out forwards',
               'subtle-float': 'subtleFloat 6s ease-in-out infinite',
             },
@@ -126,6 +125,23 @@
   .claim-button-glow:hover {
     box-shadow: 0 0 8px 1px theme('colors.accent'), 0 0 20px 2px theme('colors.accent' / 70%);
     transform: scale(1.05);
+  }
+  .animate-on-scroll {
+    opacity: 0;
+    will-change: opacity, transform;
+  }
+  .animate-on-scroll.is-visible {
+    animation: fadeInUp 0.6s ease-out forwards;
+    animation-delay: var(--animation-delay, 0s);
+  }
+  .tech-card:hover {
+    animation: jiggle 0.4s ease-in-out;
+  }
+  @keyframes jiggle {
+    0%, 100% { transform: rotate(0); }
+    25% { transform: rotate(-2deg); }
+    50% { transform: rotate(0); }
+    75% { transform: rotate(2deg); }
   }
 </style>
 <script type="importmap">
