--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
     <meta name="description" content="Welcome to the professional portfolio of Soumik. I build creative, high-performance websites and digital experiences. Explore my work, skills, and contact me for collaboration." />
     <meta name="keywords" content="web developer, portfolio, react developer, soumik, website creation, seo services, front-end developer, gemini ai" />
     <meta name="author" content="Soumik" />
+    <link rel="canonical" href="https://soumikpf.vercel.app/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-domain.com/" />
+    <meta property="og:url" content="https://soumikpf.vercel.app/" />
     <meta property="og:title" content="Soumik | Web Developer & Designer" />
     <meta property="og:description" content="Creative portfolio showcasing web development projects, skills, and services." />
-    <meta property="og:image" content="https://picsum.photos/1200/630" />
+    <meta property="og:image" content="https://i.ibb.co/nNtR0QVp/Generated-Image-September-17-2025-4-38-PM.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://your-domain.com/" />
+    <meta property="twitter:url" content="https://soumikpf.vercel.app/" />
     <meta property="twitter:title" content="Soumik | Web Developer & Designer" />
     <meta property="twitter:description" content="Creative portfolio showcasing web development projects, skills, and services." />
-    <meta property="twitter:image" content="https://picsum.photos/1200/630" />
+    <meta property="twitter:image" content="https://i.ibb.co/nNtR0QVp/Generated-Image-September-17-2025-4-38-PM.png" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -111,6 +112,48 @@
         "acceptedAnswer": {
           "@type": "Answer",
           "text": "Yes, basic on-page SEO setup is included in the website creation package. This includes meta tags, alt tags, and a sitemap to help search engines find and rank your site. I also offer more advanced SEO packages."
+        }
+      },{
+        "@type": "Question",
+        "name": "What do I need to provide to get started?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "To get started, I'll need a clear idea of your project goals, any content (text, images) you have ready, and any design inspiration or branding guidelines you'd like me to follow. We'll discuss all this in our initial consultation."
+        }
+      },{
+        "@type": "Question",
+        "name": "Do you handle domain name and web hosting?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "I can guide you through the process of purchasing a domain and selecting the best hosting plan for your needs, but the ownership and costs of the domain and hosting will be in your name. This ensures you have full control over your assets."
+        }
+      },{
+        "@type": "Question",
+        "name": "How many revisions are included in the project?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The package includes up to two major rounds of revisions during the design phase. My goal is to get it right, so I focus on clear communication from the start to ensure the initial design aligns perfectly with your vision."
+        }
+      },{
+        "@type": "Question",
+        "name": "What technologies do you use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "I specialize in modern, high-performance technologies like React, Next.js, and Tailwind CSS for the frontend, and Node.js for the backend. This ensures your website is fast, secure, and scalable."
+        }
+      },{
+        "@type": "Question",
+        "name": "Can I make changes to the website after it's live?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "For minor text or image changes, I can guide you on how to do it yourself if the site is built on a CMS. For more significant changes, I offer ongoing support and maintenance packages at an affordable rate."
+        }
+      },{
+        "@type": "Question",
+        "name": "Do you offer support after the website is launched?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, I provide 30 days of free support after launch to fix any potential bugs or issues. After that, I offer flexible and affordable monthly maintenance plans to keep your site updated and running smoothly."
         }
       }]
     }
