feat: Add Google site verification and update sitemap
Includes Google site verification meta tag in `index.html` for improved search engine indexing.
Updates `robots.txt` to point to a relative sitemap path.
Removes the `sitemap.xml` file as it's now generated dynamically.
Updates README with AI Studio link and environment variable instruction.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="web developer, portfolio, react developer, soumik, website creation, seo services, front-end developer, gemini ai" />
     <meta name="author" content="Soumik" />
     <link rel="canonical" href="https://soumikpf.vercel.app/" />
+    <meta name="google-site-verification" content="2Zfyfd76nRiFVMP3so0sF4fI5wYJsT8ChaIZmU-DZ-4" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
