--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/soumikicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO Meta Tags -->
@@ -59,6 +59,8 @@
               'fade-in': 'fadeIn 0.5s ease-out forwards',
               'subtle-float': 'subtleFloat 6s ease-in-out infinite',
               'fade-in-up': 'fadeInUp 0.6s ease-out forwards',
+              'draw': 'draw 0.5s ease-out forwards',
+              'success': 'success 1.5s ease-out forwards',
             },
             keyframes: {
               fadeInUp: {
@@ -73,6 +75,15 @@
                 '0%': { transform: 'translateY(0px)' },
                 '50%': { transform: 'translateY(-10px)' },
                 '100%': { transform: 'translateY(0px)' },
+              },
+              draw: {
+                '100%': { 'stroke-dashoffset': '0' },
+              },
+              success: {
+                '0%': { opacity: '0', transform: 'scale(0.5)' },
+                '30%': { opacity: '1', transform: 'scale(1.2)' },
+                '80%': { opacity: '1', transform: 'scale(1)' },
+                '100%': { opacity: '0', transform: 'scale(1)' },
               }
             },
           },
