feat: Add site name to Open Graph and hardcode web3forms key
Adds "Soumik's Portfolio" to the `og:site_name` meta tag for better social sharing previews.

Also, hardcodes the `access_key` for the web3forms API in the ContactPage component, removing the reliance on environment variables for this specific key.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta property="og:title" content="Soumik | Web Developer & Designer" />
     <meta property="og:description" content="Creative portfolio showcasing web development projects, skills, and services." />
     <meta property="og:image" content="https://i.ibb.co/nNtR0QVp/Generated-Image-September-17-2025-4-38-PM.png" />
+    <meta property="og:site_name" content="Soumik's Portfolio" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
