--- a/index.html
+++ b/index.html
@@ -57,35 +57,14 @@
               'light-card': '#ffffff',
             },
             animation: {
-              'fade-in': 'fadeIn 0.5s ease-out forwards',
               'subtle-float': 'subtleFloat 6s ease-in-out infinite',
-              'fade-in-up': 'fadeInUp 0.6s ease-out forwards',
-              'draw': 'draw 0.5s ease-out forwards',
-              'success': 'success 1.5s ease-out forwards',
             },
             keyframes: {
-              fadeInUp: {
-                '0%': { opacity: '0', transform: 'translateY(20px)' },
-                '100%': { opacity: '1', transform: 'translateY(0)' },
-              },
-              fadeIn: {
-                '0%': { opacity: '0' },
-                '100%': { opacity: '1' },
-              },
               subtleFloat: {
                 '0%': { transform: 'translateY(0px)' },
                 '50%': { transform: 'translateY(-10px)' },
                 '100%': { transform: 'translateY(0px)' },
               },
-              draw: {
-                '100%': { 'stroke-dashoffset': '0' },
-              },
-              success: {
-                '0%': { opacity: '0', transform: 'scale(0.5)' },
-                '30%': { opacity: '1', transform: 'scale(1.2)' },
-                '80%': { opacity: '1', transform: 'scale(1)' },
-                '100%': { opacity: '0', transform: 'scale(1)' },
-              }
             },
           },
         },
@@ -187,11 +166,14 @@
 <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "@google/genai": "https://aistudiocdn.com/google-genai@0.15.0",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.2.1/"
+    "react": "https://esm.sh/react@18.3.1",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
+    "framer-motion": "https://esm.sh/framer-motion@11.0.8?external=react,react-dom",
+    "@google/genai": "https://esm.sh/@google/genai@0.15.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/"
   }
 }
 </script>
