--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
     "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
     "framer-motion": "https://esm.sh/framer-motion@11.0.8?external=react,react-dom",
     "@google/genai": "https://esm.sh/@google/genai@0.15.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/"
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
   }
 }
 </script>
